postgresql/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service-37846382
  namespace: postgres
spec:
  ports:
    - name: postgres-port
      port: 5432
      targetPort: 5432
  selector:
    app: postgres-prod
  type: ClusterIP
